Modernize `UsePerson` with Java 17 features and suppress warnings
- Add `@SuppressWarnings("Convert2MethodRef")` to avoid inspection noise
- Replace `collect(Collectors.toList())` with `.toList()`
- Adjust regex in `split` method for consistency with whitespace handling
- Simplify `LinkedList` instantiation using diamond operator
- Use `parallelStream` for potential performance improvements